crates/ide/tests/snapshots/nav__goto_reference_matrix.snap
---
source: crates/ide/tests/nav.rs
expression: "render_nav_many(&fixture, &cases)"
---
--- goto @"count = b"#0 ---
count @267..272
--- hover ---
int
--- goto @"count;"#1 ---
count @267..272
--- hover ---
int
--- goto @"self = b"#0 ---
self @284..288
--- hover ---
com.example.Base
--- goto @"self;"#1 ---
self @284..288
--- hover ---
com.example.Base
--- goto @"method(1);"#0 ---
method @300..306
--- hover ---
void
--- goto @"method(1)"#1 ---
method @300..306
--- hover ---
void
--- goto @"method(1L)"#0 ---
method @327..333
--- hover ---
void
--- goto @"pick(1L)"#0 ---
pick @380..384
--- hover ---
void
--- goto @"STATIC;"#1 ---
STATIC @246..252
--- hover ---
int
--- goto @"FIRST;"#0 ---
FIRST @122..127
--- hover ---
com.example.E
--- goto @"SECOND:"#0 ---
SECOND @133..139
--- hover ---
com.example.E
--- goto @"q.count"#0 ---
q @999..1000
--- hover ---
com.example.Base
--- goto @"nope + 1"#0 ---

--- hover ---
<error>
