crates/ide/tests/snapshots/nav__goto_shadowed_local_use.snap
---
source: crates/ide/tests/nav.rs
expression: "render_nav(&fixture, \"(dup)\")"
---
--- goto @"(dup)" ---
dup @96..99
--- hover ---
int
