crates/ide/tests/snapshots/nav__goto_type_qualifier_of_qualified_name.snap
---
source: crates/ide/tests/nav.rs
expression: "render_nav_many(&fixture,\n&[(\"Main.FIELD\", 0), (\"Flag.ON\", 0), (\"FIELD;\", 0), (\"ON;\", 0),\n(\"shadow.FIELD\", 0),])"
---
--- goto @"Main.FIELD"#0 ---
Main @59..63
--- hover ---
class Main
--- goto @"Flag.ON"#0 ---
Flag @27..31
--- hover ---
enum Flag
--- goto @"FIELD;"#0 ---
FIELD @90..95
--- hover ---
FIELD: String
--- goto @"ON;"#0 ---
ON @38..40
--- hover ---
ON
--- goto @"shadow.FIELD"#0 ---
shadow @135..141
--- hover ---
com.example.Main
