crates/ide/tests/snapshots/nav__goto_type_reference.snap
---
source: crates/ide/tests/nav.rs
expression: "render_nav(&fixture, \"new Nav\")"
---
--- goto @"new Nav" ---
Nav @28..31
--- hover ---
com.example.Nav
