crates/ide/tests/snapshots/nav__hover_class_declaration.snap
---
source: crates/ide/tests/nav.rs
expression: "render_nav_at(&fixture, \"Nav\", 0)"
---
--- goto @"Nav"#0 ---
Nav @28..31
--- hover ---
class Nav
