crates/ide/tests/snapshots/nav__hover_docs_on_a_class_declaration.snap
---
source: crates/ide/tests/nav.rs
expression: "render_hover_docs(&fixture, \"class Docs\")"
---
--- hover @"class Docs" ---
class Docs
--- docs ---
A documented class.

Second paragraph, with a `List<Item>`.
