crates/ide/tests/snapshots/nav__hover_docs_on_a_field_declaration.snap
---
source: crates/ide/tests/nav.rs
expression: "render_hover_docs(&fixture, \"count;\")"
---
--- hover @"count;" ---
count: int
--- docs ---
How many items.
